--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   </style>
 </head>
 <body>
-  <h1>Welcome to My Simple Page</h1>
-  <p>This is a basic HTML page to get started with web development.</p>
+  <h1>Welcome to Page</h1>
+  <p>This is Kudla's website </p>
   <button onclick="alert('Hello!')">Click Me</button>
 </body>
 </html>
