--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body>
-  <h1>Welcome to Page</h1>
+  <h1>Welcome</h1>
   <p>This is Kudla's website </p>
   <button onclick="alert('Hello!')">Click Me</button>
 </body>
